--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
         <title>Survey Form</title>
     </head>
     <body>
-        <h1>Survey Form</h1>
-        <p>Please fill out this survey to help us improve our products and services.</p>
+        <h1 id="title">Survey Form</h1>
+        <p id="description">Please fill out this survey to help us improve our products and services.</p>
+        <form id="survey-form">
+            <input id="name" type="text" required />
+            <input id="email" type="emai" required />
+            <input id="number" type="number" min="100" max="200" />
+
+        </form>
     </body>
 </html>
