--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Survey Form</title>
-        <link rel="stylesheet" href="./styles.css"
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <h1 id="title">Survey Form</h1>
