--- a/index.html
+++ b/index.html
@@ -8,40 +8,45 @@
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-        <h1 id="title">Survey Form</h1>
-        <p id="description">Please fill out this survey to help us improve our products and services.</p>
-        <form id="survey-form">
-            <label id="name-label">Name
-                <input id="name" type="text" required placeholder="Enter your name here."/>
-            </label>
-            <label id="email-label">Email
-                <input id="email" type="email" required placeholder="Enter your email here"/>
-            </label>
-            <label id="number-label">Number
-                <input id="number" type="number" min="100" max="200" placeholder="Enter a number between 100 and 200 here"/>
-            </label>
-            <label id="dropdown-label">How did you hear about us?
-                <select id="dropdown">
-                    <option>How did you hear about us?</option>
-                    <option>Newspaper</option>
-                    <option>Television</option>
-                    <option>Radio</option>
-                    <option>Website</option>
-                </select>
-            </label>
-                <input type="radio" id="html" name="favorite-language" value="HTML".>
-                <label for="html">HTML</label>
-                <input type="radio" id="css" name="favorite-language" value="CSS">
-                <label for="css">CSS</label>
-                <input type="radio" id="javascript" name="favorite-language" value="JavaScript">
-                <label for="javascript">JavaScript</label>
+        <div class="heading">
+            <h1 id="title">Survey Form</h1>
+            <p id="description">Please fill out this survey to help us improve our products and services.</p>
+        </div>
+        <div class="form">
+            <form id="survey-form">
+                <label id="name-label">Name:
+                    <input id="name" type="text" required placeholder="Enter your name here."/>
+                </label>
+                <label id="email-label">Email:
+                    <input id="email" type="email" required placeholder="Enter your email here"/>
+                </label>
+                <label id="number-label">Number:
+                    <input id="number" type="number" min="100" max="200" placeholder="Enter a number between 100 and 200 here"/>
+                </label>
+            <div class="hear-about">
+                <label id="dropdown-label">How did you hear about us?
+                    <select id="dropdown">
+                        <option>How did you hear about us?</option>
+                        <option>Newspaper</option>
+                        <option>Television</option>
+                        <option>Radio</option>
+                        <option>Website</option>
+                    </select>
+                </label>
+                    <input type="radio" id="html" name="favorite-language" value="HTML".>
+                    <label for="html">HTML</label>
+                    <input type="radio" id="css" name="favorite-language" value="CSS">
+                    <label for="css">CSS</label>
+                    <input type="radio" id="javascript" name="favorite-language" value="JavaScript">
+                    <label for="javascript">JavaScript</label>
 
-                <input type="checkbox" name="junior-developer" value="junior-developer">
-                <label for="junior-developer">I am a Junior Developer</label>
-                <input type="checkbox" name="senior-developer" value="senior-developer">
-                <label for="senior-developer">I am a Senior Developer</label>
-                <textarea id="background" placeholder="What is your background..."></textarea>
-                <button id="submit">Submit</button>    
-        </form>
+                    <input type="checkbox" name="junior-developer" value="junior-developer">
+                    <label for="junior-developer">I am a Junior Developer</label>
+                    <input type="checkbox" name="senior-developer" value="senior-developer">
+                    <label for="senior-developer">I am a Senior Developer</label>
+                    <textarea id="background" placeholder="What is your background..."></textarea>
+                    <button id="submit">Submit</button>    
+            </form>
+        </div>
     </body>
 </html>
